# L7

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Notes.md  README.md  admin-panel-plan.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
admin-panel/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin-panel/src/: App.tsx
admin-panel/src/api/: client.ts  movies.ts  persons.ts
admin-panel/src/hooks/: useDebouncedValue.ts
admin-panel/src/pages/: ActorDetailPage.test.tsx  ActorDetailPage.tsx  ActorPage.test.tsx  ActorPage.tsx  DashboardPage.test.tsx  DashboardPage.tsx  FilmDetailPage.test.tsx  FilmDetailPage.tsx  FilmPage.test.tsx  FilmPage.tsx
alembic/: env.py
alembic/versions/: 0001_init.py  0002_movie_persons.py  0003_movie_genres.py  0004_add_image_path.py  0005_add_reviews.py
app/: logging_config.py  main.py
app/db/: clean_db.py  config.py  data.json  ratings.json  reviews.json  seed.py  session.py
app/schemas/: movie.py  movie_person.py  person.py  review.py
app/storage/: __init__.py  base.py  config.py  local.py
httprequests/: dbclean.http  dbseed.http
systemdesign/: DB.txt  problemstatement.txt  widgets.tsv
tests/: Dockerfile  README.md  conftest.py  test_admin_api.py  test_movie_image_upload.py  test_movies_api.py  test_persons_api.py  test_reviews_api.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css
(+57 files in other folders)
