[project]
name = "imdb-api"
version = "0.1.0"
description = "IMDB-style API - Movies, Persons, Roles with CRUD and search"
readme = "Notes.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/env.py" = ["I001", "B008"]
"app/api/routers/*.py" = ["B008"]  # FastAPI Depends() in defaults is intentional
"app/db/models/movie_person.py" = ["UP037"]  # forward refs for relationship types
"app/db/models/movie_genre.py" = ["F821", "UP037"]  # forward ref for Movie (no import to avoid circular)
"tests/*" = ["B011"]  # assert False ok in tests
